fixed centering and alignment of header

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,19 +1,12 @@
 body {
     background: url("../images/opening.jpg");
     background-size: 100%;
-    background-repeat: no-repeat;
-}
-
-#headerDiv {
-    position: relative;
 }
 
 #rpgText {
-    display: inline-flex;
-    position: absolute;
-
     font-family: 'Permanent Marker', cursive;
     font-size: 60pt;
+    line-height: .75;
 }
 
 .card {
